--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-
+<h1> CRIAR USUARIO</h1>
 <form method="POST" action="{{ url_for('adicionar_usuario') }}">
 
     <div class="mb-3">
