--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,13 @@
     <title>Flask</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
-
+<style>
+    body{
+        background-color: black;
+    }
+</style>
 <body>
-    <h1>Usuarios</h1>
+    <h1 style="color: white">Usuarios</h1>
     <table class="table">
         <thead>
             <tr>
@@ -14,6 +18,7 @@
                 <th>Nome</th>
                 <th>Email</th>
                 <th>Idade</th>
+                <th>Gerenciamento</th>
             </tr>
         </thead>
         <tbody>
@@ -28,10 +33,9 @@
                 <input type="hidden" name="_method" value="DELETE">
                 <button type="submit" class="btn btn-danger">Deletar</button>
             </form>
-        </td>
-        <td>
             <a href="{{ url_for('editar_usuario', id=row[0]) }}" class="btn btn-primary">Editar</a>
         </td>
+
     </tr>
     {% endfor %}
 </tbody>
