--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,19 +1,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<h1> EDITAR USUARIO</h1>
+    <style>
+    body{
+        background-color: black;
+    }
+</style>
+<h1 style="color: white"> EDITAR USUARIO</h1>
 <form method="POST" action="{{ url_for('atualizar_usuario', id=usuario[0]) }}">
-    <div class="form-group">
-        <label for="nome">Nome:</label>
+    <div class="mb-3">
+        <label for="nome" style="color: white">Nome:</label>
         <input type="text" id="nome" name="nome" value="{{ usuario[1] }}" class="form-control">
     </div>
-    <div class="form-group">
-        <label for="email">Email:</label>
+    <div class="mb-3">
+        <label for="email" style="color: white">Email:</label>
         <input type="email" id="email" name="email" value="{{ usuario[2] }}" class="form-control">
     </div>
-    <div class="form-group">
-        <label for="idade">Idade:</label>
+    <div class="mb-3">
+        <label for="idade" style="color: white">Idade:</label>
         <input type="number" id="idade" name="idade" value="{{ usuario[3] }}" class="form-control">
     </div>
+
     <button type="submit" class="btn btn-primary">Atualizar</button>
 </form>
 
