--- a/templates/new.html
+++ b/templates/new.html
@@ -1,22 +1,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-<h1> CRIAR USUARIO</h1>
+    <style>
+    body{
+        background-color: black;
+    }
+</style>
+<h1 style="color: white"> CRIAR USUARIO</h1>
 <form method="POST" action="{{ url_for('adicionar_usuario') }}">
 
     <div class="mb-3">
-    <label for="nome" class="form-label">Nome:</label>
+    <label for="nome" class="form-label" style="color: white">Nome:</label>
     <input type="text" class="form-control" id="nome" name="nome">
 
   </div>
 
     <div class="mb-3">
-    <label for="email" class="form-label">Email:</label>
+    <label for="email" class="form-label" style="color: white">Email:</label>
     <input type="email" class="form-control" id="email" name="email">
 
   </div>
 
     <div class="mb-3">
-    <label for="idade" class="form-label">Idade:</label>
+    <label for="idade" class="form-label" style="color: white">Idade:</label>
     <input type="number" class="form-control" id="idade"  name="idade">
   </div>
 
