--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,10 +1,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
 
-    <style>
-    body{
-        background-color: black;
-    }
-</style>
 <h1 style="color: white"> EDITAR USUARIO</h1>
 <form method="POST" action="{{ url_for('atualizar_usuario', id=usuario[0]) }}">
     <div class="mb-3">
