--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,10 @@
 <head>
     <title>Flask</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+
 </head>
-<style>
-    body{
-        background-color: black;
-    }
-</style>
+
 <body>
     <h1 style="color: white">Usuarios</h1>
     <table class="table">
